# pointcloud-registration

./: .dockerignore  .gitignore  Dockerfile  README.md
submissions/: REPORT.md  pyproject.toml
submissions/src/pc_reg/: icp.py  io.py  main.py  metrics.py  pca_init.py  run.py  transform.py  viz.py  voxel.py
