[tool.poetry]
package-mode = false
name = "pc-reg"
version = "0.1.0"
description = "Point cloud registration internship task"
authors = ["Your Name <you@example.com>"]


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "<2.0"
matplotlib = "^3.10.8"

[dependency-groups]
dev = [
    "black (>=26.1.0,<27.0.0)"
]
